--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "lucide-react": "^0.539.0",
     "mobx-react-lite": "^4.1.0",
     "mobx-state-tree": "^7.0.2",
+    "next-themes": "^0.4.6",
     "perfect-freehand": "^1.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
