--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.6",
+    "wrangler": "^4.34.0"
   }
 }
