--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@zzro/z-color-picker": "^2.2.0",
     "astro": "^5.12.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
