--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dist/
 
 # generated types
 .astro/
+.wrangler/
 
 # dependencies
 node_modules/
@@ -25,3 +26,4 @@ pnpm-debug.log*
 
 # Cloudflare Wrangler config
 wrangler.toml
+ 
